src/objects/Apttus_Config2__ProductFeatureValue__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__FeatureId__c</fullName>
        <label>Feature</label>
        <referenceTo>Apttus_Config2__Feature__c</referenceTo>
        <relationshipLabel>Product Feature Values</relationshipLabel>
        <relationshipName>ProductFeatureValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsIncluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Feature Values</relationshipLabel>
        <relationshipName>ProductFeatureValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Feature Value</label>
    <nameField>
        <displayFormat>PFV-{0}</displayFormat>
        <label>Product Feature Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Feature Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>